updated to UtilityClass and toList() instead of Collectors.toList()